--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Entry</title>
+    <title>鸽哒文档</title>
     <link rel="stylesheet" href="./App.less" />
 </head>
 <body>
