--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,17 @@
 <html lang="zh-Hans">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>鸽哒文档</title>
     <link rel="stylesheet" href="./App.less" />
 </head>
 <body>
     <div id="app"></div>
+    
+    <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init()</script>
     <script src="./main.tsx"></script>
 </body>
 </html>
