--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
 <body>
     <div id="app"></div>
     
-    <script src="//cdn.jsdelivr.net/npm/eruda"></script>
-    <script>eruda.init()</script>
+    <!-- <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init()</script> -->
     <script src="./main.tsx"></script>
 </body>
 </html>
