--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>鸽哒文档</title>
+    <script src="./IconFont/iconfont.js"></script>
     <link rel="stylesheet" href="./App.less" />
 </head>
 <body>
